# 2D-DCT

./: DCT.h  README.md  block_DCT.py  color_DCT.ipynb  index.css  index.html  pyproject.toml  requirements.txt  texput.tex
C_implementation/: DCT-2D.c
docs/: DCT_basis.ipynb  index.html  texput.tex
docs/HTML/: index.css  index.html  texput.tex
docs/HTML/graphics/: 2D-DCT_basis.ipynb
docs/graphics/: 2D-DCT_basis.ipynb
docs/notebooks/: YCoCg_2D_DCT_SQ.ipynb
src/C_implementation/: DCT.c  Makefile
src/DCT/: block_DCT.py
src/DCT2D/: YCoCg_2D_DCT_SQ.ipynb  block_DCT.py
