[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DCT"
version = "0.0.1"
authors = [
  { name="Vicente González Ruiz", email="vicente.gonzalez.ruiz@gmail.com" },
]
description = "2D-DCT (Discrete Cosine Transform)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vicente-gonzalez-ruiz/DCWT"
"Bug Tracker" = "https://github.com/vicente-gonzalez-ruiz/DCT/issues"
